f-base-dialog: fix gap between content and actions after form refactor

--- a/frontend/src/css/main/helpers.sass
+++ b/frontend/src/css/main/helpers.sass
@@ -55,6 +55,8 @@
 .cursor-grabbing
   cursor: grabbing
 
+.gap-0
+  gap: 0
 .gap-1
   gap: 4px
 .gap-2
